[gd_scene load_steps=6 format=3 uid="uid://c7m8n4p9qr3td"]

[ext_resource type="Script" path="res://scripts/vehicles/car_controller.gd" id="1_car_controller"]
[ext_resource type="Script" path="res://scripts/multiplayer/networked_vehicle.gd" id="2_networked_vehicle"]

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(2, 1, 6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.8, 0.2, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(2, 1, 6)

[node name="NetworkedCar" type="VehicleBody3D"]
mass = 1200.0
script = ExtResource("1_car_controller")

[node name="CarMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="CarCollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1")

[node name="FrontLeftWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, -0.3, 1.2)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.3
wheel_rest_length = 0.4
suspension_travel = 0.3
suspension_stiffness = 40.0

[node name="FrontRightWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, -0.3, 1.2)
use_as_traction = true
use_as_steering = true
wheel_radius = 0.3
wheel_rest_length = 0.4
suspension_travel = 0.3
suspension_stiffness = 40.0

[node name="RearLeftWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, -0.3, -1.2)
use_as_traction = true
wheel_radius = 0.3
wheel_rest_length = 0.4
suspension_travel = 0.3
suspension_stiffness = 40.0

[node name="RearRightWheel" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, -0.3, -1.2)
use_as_traction = true
wheel_radius = 0.3
wheel_rest_length = 0.4
suspension_travel = 0.3
suspension_stiffness = 40.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 8)
fov = 75.0
current = false

[node name="NetworkSync" type="Node" parent="."]
script = ExtResource("2_networked_vehicle")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
delta_interval = 0.05
replication_config = SubResource("SceneReplicationConfig_1")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath(".:linear_velocity")
properties/2/spawn = false
properties/2/sync = true
properties/3/path = NodePath(".:angular_velocity")
properties/3/spawn = false
properties/3/sync = true